oops forgot a twig

--- a/client/index.twig
+++ b/client/index.twig
@@ -1,8 +1,8 @@
-{% extends "base.tpl" %}
+{% extends "base.twig" %}
 
 {% block title %}:v{% endblock %}
 
 {% block content %}
-<h1>This is a header block</h1>
-<p>hey this should be replaced with something not-trash.</p>
+  <h1>This is a header block</h1>
+  <p>hey this should be replaced with something not-trash.</p>
 {% endblock %}
