--- a/client/main.css
+++ b/client/main.css
@@ -200,7 +200,7 @@ text {
 .longtail {
 	stroke-width: 1px;
 	stroke: rgba(0, 0, 0, 0.3);
-	stroke-dasharray: 5px;
+	stroke-dasharray: 2;
 	fill: none;
 }
 
