--- a/client/src/main.css
+++ b/client/src/main.css
@@ -12,6 +12,11 @@ body {
 	flex-direction: column;
 }
 
+.gear rect {
+	fill: rgba(238, 238, 238, 0.8);
+	stroke: none;
+}
+
 /* per day view */
 
 #perdayviewdiv {
