--- a/client/base.twig
+++ b/client/base.twig
@@ -2,8 +2,60 @@
 <html>
   <head>
     <title>{% block title %}Armbreaker{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.calref.net/boot/js/jquery.min.js"></script>
+    <link href="https://cdn.calref.net/boot/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.calref.net/boot/js/bootstrap.min.js"></script>
+    <link href="/client/bootstrap-edits.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- :sob: -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112170386-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-112170386-1');
+    </script>
   </head>
   <body>
-    {% block content %}<p>Put content here :v</p>{% endblock %}
+    <nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Armbreaker</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Find a fic...">
+            </div>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://github.com/sylae/armbreaker">Github</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron" style="background: url('https://cdn.calref.net/errormsg/back.jpg'); margin-top:-100px;padding-top:100px;background-attachment:fixed;" >
+      <div class="container">
+        <div class="col-md-12" style="text-align: center; color:#eee;">
+          <h1 style="letter-spacing:.25em;">Armbreaker</h1>
+          <h2 style="opacity:0.6;">Spacebattles fanfiction like analysis</h2>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="shade">
+        {% block content %}<p>Put content here :v</p>{% endblock %}
+      </div>
+    </div>
   </body>
 </html>
